# edudiff

./: README.md  example_gradients.ipynb  pyproject.toml
edudiff/: __init__.py  ops.py  utils.py  value.py
