[tool.poetry]
name = "edudiff"
version = "0.1.0"
description = ""
authors = ["Conrad Stansbury <chstansbury@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
